Update unit tests. Trello #91 for future ref